fixed white space in the background of about page, solutions was to move the video background up to touch top of page. Created sample footer. Current issues are that content is going out of footer and it doesn't appear on about page.

--- a/application/Frontend/src/App.css
+++ b/application/Frontend/src/App.css
@@ -1,5 +1,16 @@
-.App {
-  text-align: center;
+#root, body, html {
+  min-height: 100vh;
+  display: flex;
+  flex-direction: column;
+}
+.App, .app-root {
+  flex: 1 0 auto;
+  display: flex;
+  flex-direction: column;
+}
+/* fix for main content wrapper */
+main, .main-content {
+  flex: 1 0 auto;
 }
 
 .App-logo {
