--- a/application/Frontend/src/Navbar.css
+++ b/application/Frontend/src/Navbar.css
@@ -5,6 +5,14 @@
   padding: 0.7rem 2rem 0.7rem 2.5rem;
   font-family: 'Inter', sans-serif;
   font-weight: 400;
+  position: sticky;
+  top: 0;
+  z-index: 1000;
+  background: rgba(255, 255, 255, 0);
+  box-shadow: none;
+  -webkit-backdrop-filter: blur(5px);
+  backdrop-filter: blur(2px);
+  /* Make sure content stays sharp and readable */
 }
 
 .navbar-logo-img {
